--- a/WindowExplorer/Sources/Controllers/RecordCollectionViewController/Views/RecordCollectionItemView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordCollectionViewController/Views/RecordCollectionItemView.xib
@@ -24,7 +24,7 @@
                     <subviews>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aJM-bH-fKM">
                             <rect key="frame" x="3" y="0.0" width="286" height="17"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" id="CcV-ew-qZK">
+                            <textFieldCell key="cell" lineBreakMode="charWrapping" sendsActionOnEndEditing="YES" alignment="left" id="CcV-ew-qZK">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
