--- a/WindowExplorer/Sources/Controllers/RecordCollectionViewController/Collection.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordCollectionViewController/Collection.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="Br5-Pb-O0I">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="Br5-Pb-O0I">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -66,13 +67,13 @@
                                 </constraints>
                             </customView>
                             <scrollView wantsLayer="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XBj-Xh-EdN" customClass="FadingScrollView" customModule="WindowExplorer" customModuleProvider="target">
-                                <rect key="frame" x="15" y="20" width="386" height="660"/>
+                                <rect key="frame" x="20" y="20" width="376" height="660"/>
                                 <clipView key="contentView" drawsBackground="NO" id="R4d-54-FPP">
-                                    <rect key="frame" x="0.0" y="0.0" width="386" height="660"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="660"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <collectionView id="Db6-vA-kMp">
-                                            <rect key="frame" x="0.0" y="0.0" width="386" height="660"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="660"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="KKY-Qs-SOP">
                                                 <size key="itemSize" width="300" height="80"/>
@@ -94,7 +95,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zpx-AJ-fLv">
-                                    <rect key="frame" x="370" y="0.0" width="16" height="660"/>
+                                    <rect key="frame" x="360" y="0.0" width="16" height="660"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -125,8 +126,8 @@
                             <constraint firstItem="oMV-1r-Wl3" firstAttribute="top" secondItem="I0N-k6-TNG" secondAttribute="top" id="Zgy-f4-1fq"/>
                             <constraint firstItem="r1e-KB-R9v" firstAttribute="top" secondItem="XBj-Xh-EdN" secondAttribute="bottom" id="eVQ-fh-tzo"/>
                             <constraint firstItem="r1e-KB-R9v" firstAttribute="leading" secondItem="I0N-k6-TNG" secondAttribute="leading" id="fJR-kh-iI0"/>
-                            <constraint firstItem="XBj-Xh-EdN" firstAttribute="leading" secondItem="I0N-k6-TNG" secondAttribute="leading" constant="15" id="gYW-uc-gD8"/>
-                            <constraint firstAttribute="trailing" secondItem="XBj-Xh-EdN" secondAttribute="trailing" constant="15" id="vth-h8-GSl"/>
+                            <constraint firstItem="XBj-Xh-EdN" firstAttribute="leading" secondItem="I0N-k6-TNG" secondAttribute="leading" constant="20" id="gYW-uc-gD8"/>
+                            <constraint firstAttribute="trailing" secondItem="XBj-Xh-EdN" secondAttribute="trailing" constant="20" id="vth-h8-GSl"/>
                             <constraint firstItem="XBj-Xh-EdN" firstAttribute="top" secondItem="oMV-1r-Wl3" secondAttribute="bottom" id="wF6-Vp-bH1"/>
                         </constraints>
                     </view>
